Finished styling all the sections remaining the footer section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             We Provide you with the industry best headphones to enable you to
             hear the sound of your music and not the noise
           </p>
-          <button class="signup-btn">Sign Up</button>
+          <button class="signup-btn">Sign up</button>
         </div>
         <img
           src="./img/showcase.png"
@@ -35,5 +35,76 @@
         />
       </div>
     </header>
+    <!-- ====== -->
+    <section class="product-features">
+      <div class="container">
+        <h2>Headphone Features</h2>
+        <div class="boxes">
+          <div class="box">
+            <span
+              ><img src="./img/noise-cancel.png" alt="" />
+              <h3 class="lead-text">Noise Cancellation</h3></span
+            >
+            <p class="quote-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+              similique.
+            </p>
+          </div>
+          <div class="box">
+            <span
+              ><img src="./img/bluetooth.png" alt="" />
+              <h3 class="lead-text">Multipoint Pairing</h3>
+            </span>
+            <p class="quote-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+              eius.
+            </p>
+          </div>
+          <div class="box">
+            <span
+              ><img src="./img/voice-command.png" alt="" />
+              <h3 class="lead-text">Voice Command</h3></span
+            >
+            <p class="quote-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Officiis, unde.
+            </p>
+          </div>
+          <div class="box">
+            <span
+              ><img src="./img/sound-quality.png" alt="" />
+              <h3 class="lead-text">Sound Quality</h3></span
+            >
+            <p class="quote-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto, unde.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ====================== -->
+    <section class="container">
+      <div class="testimonial">
+        <p>
+          We had previously tried other headphones, but they were not near as
+          excellent as these. These operate well, and I'm really satisfied with
+          my decision to purchase these. Thank you for a fantastic product!
+        </p>
+        <p class="client"><strong>- Joyce Mike</strong></p>
+      </div>
+    </section>
+
+    <section class="action-call">
+      <div class="container">
+        <div>
+          <h4>Call to action! It's time!</h4>
+          <small>
+            Sign up for our product by clicking that button right over there!
+          </small></small>
+        </div>
+        <button class="signup-btn">Sign up</button>
+      </div>
+    </section>
   </body>
 </html>
