Done with the footer styling and added responsiveness to it

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
               <h3 class="lead-text">Noise Cancellation</h3></span
             >
             <p class="quote-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-              similique.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+              eius.
             </p>
           </div>
           <div class="box">
@@ -66,8 +66,8 @@
               <h3 class="lead-text">Voice Command</h3></span
             >
             <p class="quote-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Officiis, unde.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+              eius.
             </p>
           </div>
           <div class="box">
@@ -76,8 +76,8 @@
               <h3 class="lead-text">Sound Quality</h3></span
             >
             <p class="quote-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Architecto, unde.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+              eius.
             </p>
           </div>
         </div>
@@ -101,10 +101,13 @@
           <h4>Call to action! It's time!</h4>
           <small>
             Sign up for our product by clicking that button right over there!
-          </small></small>
+          </small>
         </div>
         <button class="signup-btn">Sign up</button>
       </div>
     </section>
+
+    <!-- ====================== -->
+    <footer>Copyright &copy; Soundy 2023</footer>
   </body>
 </html>
